--- a/new/play.html
+++ b/new/play.html
@@ -11,27 +11,31 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7962287588031867" crossorigin="anonymous"></script>
 </head>
 <body>
-  <center>
-    <!-- game_play_top -->
-		<ins class="adsbygoogle"
-		style="display:block"
-		data-ad-client="ca-pub-7962287588031867"
-		data-ad-slot="2077443937"
-		data-ad-format="auto"
-		data-full-width-responsive="true"></ins>
-		<script>
-		(adsbygoogle = window.adsbygoogle || []).push({});
-		</script>
-  </center>
-  <div id="App" v-cloak>
+	<div id="App" v-cloak>
+		<center>
+			<!-- game_play_top -->
+			<ins class="adsbygoogle"
+			style="display:block"
+			data-ad-client="ca-pub-7962287588031867"
+			data-ad-slot="2077443937"
+			data-ad-format="auto"
+			data-full-width-responsive="true"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+		</center>
     <div class="play_game">
       <iframe class="game" :src="`https://www.datinginfo.top/game/index.html?gameFileName=${gameFileName}/`"
         frameborder="0" scrolling="no" allowfullscreen></iframe>
       <div class="posterBanner" ref='topAd' v-html='poster4'></div>
     </div>
-
+		<center>
+			<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script>
+			<div id="container-1f864025660e0313b39b07092a63d8a7"></div>
+		</center>
     <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/Home Loan.png" class="back" @click="handleBackHome">
   </div>
+	<script type='text/javascript' src='//pl26562418.profitableratecpm.com/49/89/a9/4989a90eb2813454416c1bdddec9157e.js'></script>
 	<style>
     * {
       margin: 0;
