--- a/new/play.html
+++ b/new/play.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/youngjuning/images@main/1742301937620.png" type="image/x-icon">
   <title>Aoki H5 Games</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7962287588031867" crossorigin="anonymous"></script>
+	<script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9321962,document.createElement('script'))</script>
 </head>
 <body>
 	<div id="App" v-cloak>
@@ -31,7 +32,6 @@
     </div>
     <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/Home Loan.png" class="back" @click="handleBackHome">
   </div>
-	<script type='text/javascript' src='//pl26562418.profitableratecpm.com/49/89/a9/4989a90eb2813454416c1bdddec9157e.js'></script>
 	<style>
     * {
       margin: 0;
