--- a/puzzle/detail.html
+++ b/puzzle/detail.html
@@ -81,6 +81,9 @@
           </div>
         </div>
       </section>
+			<center>
+				<script async="async" data-cfasync="false" src="//pl26562303.profitableratecpm.com/1f864025660e0313b39b07092a63d8a7/invoke.js"></script><div id="container-1f864025660e0313b39b07092a63d8a7"></div>
+			</center>
       <section class="section">
         <div class="container">
           <div class="row">
