--- a/new/play.html
+++ b/new/play.html
@@ -9,7 +9,6 @@
   <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/youngjuning/images@main/1742301937620.png" type="image/x-icon">
   <title>Aoki H5 Games</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7962287588031867" crossorigin="anonymous"></script>
-	<script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9321962,document.createElement('script'))</script>
 </head>
 <body>
 	<div id="App" v-cloak>
@@ -31,6 +30,7 @@
       <div class="posterBanner" ref='topAd' v-html='poster4'></div>
     </div>
     <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/Home Loan.png" class="back" @click="handleBackHome">
+		<script type='text/javascript' src='//pl26625401.profitableratecpm.com/fe/23/5c/fe235cc12bfda5c20c75eb0c49b4c14c.js'></script>
   </div>
 	<style>
     * {
