--- a/sports/play.html
+++ b/sports/play.html
@@ -31,6 +31,7 @@
       <div class="posterBanner" ref='topAd' v-html='poster4'></div>
     </div>
     <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/Home Loan.png" class="back" @click="handleBackHome">
+		<script type='text/javascript' src='//pl26625401.profitableratecpm.com/fe/23/5c/fe235cc12bfda5c20c75eb0c49b4c14c.js'></script>
   </div>
 	<style>
     * {
