--- a/puzzle/play.html
+++ b/puzzle/play.html
@@ -39,7 +39,7 @@
     </div>
     <img src="https://cdn.jsdelivr.net/gh/youngjuning/cdn@main/poki/imgs/Home Loan.png" class="back" @click="handleBackHome">
   </div>
-	<script type='text/javascript' src='//pl26625401.profitableratecpm.com/fe/23/5c/fe235cc12bfda5c20c75eb0c49b4c14c.js'></script>
+	<!-- <script type='text/javascript' src='//pl26625401.profitableratecpm.com/fe/23/5c/fe235cc12bfda5c20c75eb0c49b4c14c.js'></script> -->
 	<style>
     * {
       margin: 0;
